--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -4,6 +4,10 @@ body{
   margin: 0%;
   padding: 0%;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 .form-cont{
   /* border: 2px solid red; */
   margin-top: 2%;
@@ -37,4 +41,22 @@ body{
   display: flex;
   gap: 20px;
   
+}
+.loginbox{
+  /* border: 2px solid black; */
+  margin: auto;
+  min-width: 210px;
+  width: 20%;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+.loginbox input{
+  padding: 10px;
+}
+.status{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
 }
