fixed some redux problem

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -45,6 +45,7 @@ a{
 .loginbox{
   /* border: 2px solid black; */
   margin: auto;
+  margin-top: 2%;
   min-width: 210px;
   width: 20%;
   display: flex;
